--- a/projekte.html
+++ b/projekte.html
@@ -29,13 +29,26 @@
     <section class="projekte-intro">
       <h2>Projekte</h2>
       <p>
-        Auf dieser Seite präsentiere ich ausgewählte Projekte, Konzepte und Ideen. 
-        Sie spiegeln meine Denkweise, meinen Arbeitsstil und meine Interessen wider. 
+        Auf dieser Seite präsentiere ich ausgewählte Projekte, Konzepte und Ideen.
+        Sie verstehen sich als Antworten auf reale Herausforderungen – klar gedacht, praktisch orientiert und mit Blick auf Wirkung umgesetzt.
         <br><br>
         <strong>Hinweis:</strong> Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
         sondern dienen ausschließlich zur Veranschaulichung und Inspiration. 
         Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
         ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
+      </p>
+      <p>
+        <strong>Schutz und Urheberschaft:</strong> 
+        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert 
+        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt. 
+        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.
+        Eine Nutzung, Reproduktion oder Weiterentwicklung ist nur mit vorheriger, ausdrücklicher Zustimmung zulässig.
+      </p>
+      <p>
+        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten, 
+        die gesellschaftliche oder technologische Herausforderungen sichtbar machen. 
+        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation 
+        wird als Verletzung der Urheberschaft gewertet.
       </p>
     </section>
 
@@ -43,116 +56,137 @@
     <section class="angebote">
       <div class="angebot-list">
 
-        <!-- VoiceHealthLog -->
+        <!-- 1. SocialShield -->
         <details class="neon-card">
-          <summary><h3>VoiceHealthLog – Sprachbasiertes Gesundheitstagebuch</h3>
-            <p>Gesundheitsdaten per Spracheingabe: präzise, lokal, intuitiv.</p></summary>
-          <p>VoiceHealthLog erkennt Symptome, Intensität und Verlauf per Spracheingabe und speichert sie strukturiert auf dem Gerät. 
-          Die App nutzt Kotlin, Jetpack Compose und Room und schützt die Privatsphäre durch vollständige Offline-Verarbeitung. 
-          Sie zeigt, wie Spracherkennung und Gesundheitsdaten elegant verbunden werden können.</p>
+          <summary><h3>SocialShield – Deutschlands Sozialstaat als Modell</h3>
+            <p>Frieden als Strategie – Stärke durch Fürsorge.</p></summary>
+          <p>SocialShield verknüpft ökonomische, diplomatische und kommunikative Ansätze 
+          zu einer nationalen Friedensstrategie. 
+          Das Projekt zeigt, wie Deutschland durch soziale Investitionen 
+          internationale Stabilität fördern kann.</p>
         </details>
 
-        <!-- eAU-Sync -->
-        <details class="neon-card">
-          <summary><h3>eAU-Sync – Elektronische Arbeitsunfähigkeitsbescheinigungen</h3>
-            <p>Ein-Klick-Abruf für Arbeitgeber: digital, modular, teilhabeorientiert.</p></summary>
-          <p>eAU-Sync vereinfacht den Abruf elektronischer Krankmeldungen für kleine Betriebe. 
-          Das System bietet Datenbank, Archivierung, Exporte und modulare Schnittstellen, 
-          um spätere ITSG-Integration zu ermöglichen. 
-          Es demonstriert, wie zugängliche IT digitale Pflichtprozesse fair gestalten kann.</p>
-        </details>
-
-        <!-- CLEA -->
-        <details class="neon-card">
-          <summary><h3>CLEA – Citizen Legal Empowerment Assistant</h3>
-            <p>KI-Forschung für gerechteren Rechtszugang und Bürger-Mündigkeit.</p></summary>
-          <p>CLEA untersucht, wie KI jurisches Wissen für Bürger zugänglich machen kann. 
-          Simulationen und mathematische Modelle zeigen, wo Wissen und Macht auseinanderfallen. 
-          Das Projekt vereint Transparenz, Ethik und gesellschaftliche Forschung in einem Proof-of-Concept.</p>
-        </details>
-
-        <!-- OTE -->
-        <details class="neon-card">
-          <summary><h3>Open Transparency Engine (OTE)</h3>
-            <p>Finanzflüsse sichtbar machen – maschinenlesbar, offen, demokratisch.</p></summary>
-          <p>OTE sammelt und visualisiert staatliche Finanzströme, Subventionen und Lobbygelder. 
-          Als Python-Prototyp mit CSV-Datenbank und Dashboard-Vision schafft es eine Grundlage für 
-          nachvollziehbare Transparenz und eine faktenbasierte Öffentlichkeit.</p>
-        </details>
-
-        <!-- Resonanz-Kompass -->
-        <details class="neon-card">
-          <summary><h3>Der Resonanz-Kompass – Digitaler Erkenntnispfad</h3>
-            <p>Ein interaktiver Pfad durch Haltungen, Entscheidungen und Humanismus.</p></summary>
-          <p>Der Resonanz-Kompass kombiniert Storytelling, Entscheidungslogik und Reflexion. 
-          In fünf Stationen erlebt der Nutzer demokratische und ethische Haltungen interaktiv. 
-          Technisch ist es eine Single-File-Web-App mit klarer, futuristischer Gestaltung.</p>
-        </details>
-
-        <!-- HinSchG -->
-        <details class="neon-card">
-          <summary><h3>HinSchG-Prototype – Interner Hinweisgeber-Chat</h3>
-            <p>Sichere, anonyme Kommunikation mit rechtlich geprüften Fristen.</p></summary>
-          <p>Das Projekt setzt das Hinweisgeberschutzgesetz technisch um: 
-          pseudonyme Meldungen, Hash-Ketten-Datenbank, Fristenmanagement und Unit-Tests. 
-          Es zeigt, wie Compliance und Benutzerfreundlichkeit in einem leichten System verschmelzen.</p>
-        </details>
-
-        <!-- NullState -->
+        <!-- 2. NullState -->
         <details class="neon-card">
           <summary><h3>NullState – Dezentrale Governance</h3>
-            <p>Politische Entscheidungen ohne Ämter und Machtkonzentration.</p></summary>
+            <p>Wenn Macht nicht mehr gehortet, sondern geteilt wird.</p></summary>
           <p>NullState erforscht neue Formen digitaler Demokratie mit zufälligen, 
           zeitlich begrenzten Mandaten. 
           Entscheidungen werden transparent dokumentiert, um gerechte Teilhabe zu ermöglichen 
           und Hierarchien aufzulösen.</p>
         </details>
 
-        <!-- TimeBook -->
+        <!-- 3. OTE -->
         <details class="neon-card">
-          <summary><h3>TimeBook – Webbasierte Terminverwaltung</h3>
-            <p>Einfach, lokal und flexibel – Terminorganisation im Browser.</p></summary>
-          <p>TimeBook ermöglicht direkte Terminbuchung über Browser und speichert alles in einer SQLite-Datenbank. 
-          Ideal für kleine Unternehmen, die eine schlanke Lösung ohne Cloud-Abhängigkeit benötigen. 
-          Entwickelt in Python mit Flask.</p>
+          <summary><h3>Open Transparency Engine – Licht in die Schatten der Finanzen</h3>
+            <p>Wenn Zahlen sprechen, verlieren Systeme ihre Tarnung.</p></summary>
+          <p>OTE sammelt und visualisiert staatliche Finanzströme, Subventionen und Lobbygelder. 
+          Als Python-Prototyp mit CSV-Datenbank und Dashboard-Vision schafft es eine Grundlage für 
+          nachvollziehbare Transparenz und eine faktenbasierte Öffentlichkeit.</p>
         </details>
 
-        <!-- Rent a Pro -->
+        <!-- 4. CLEA -->
+        <details class="neon-card">
+          <summary><h3>CLEA – Citizen Legal Empowerment Assistant</h3>
+            <p>Wenn Recht kein Privileg mehr ist, sondern Wissen – transparent, messbar, menschlich.</p></summary>
+          <p>CLEA untersucht, wie KI jurisches Wissen für Bürger zugänglich machen kann. 
+          Simulationen und mathematische Modelle zeigen, wo Wissen und Macht auseinanderfallen. 
+          Das Projekt vereint Transparenz, Ethik und gesellschaftliche Forschung in einem Proof-of-Concept.</p>
+        </details>
+
+        <!-- 5. HinSchG -->
+        <details class="neon-card">
+          <summary><h3>HinSchG-Prototype – Der stille Kanal für laute Wahrheiten</h3>
+            <p>Wo Worte geschützt werden müssen, sorgt Code für Vertrauen.</p></summary>
+          <p>Das Projekt setzt das Hinweisgeberschutzgesetz technisch um: 
+          pseudonyme Meldungen, Hash-Ketten-Datenbank, Fristenmanagement und Unit-Tests. 
+          Es zeigt, wie Compliance und Benutzerfreundlichkeit in einem leichten System verschmelzen.</p>
+        </details>
+
+        <!-- 6. YouthShield -->
+        <details class="neon-card">
+          <summary><h3>YouthShield – Intelligentes Fallmanagement für die Jugendhilfe</h3>
+            <p>Weil kein Kind übersehen werden darf – nicht durch Bürokratie, nicht durch Zufall.</p></summary>
+          <p>YouthShield kombiniert Risikobewertung, Fristenkontrolle und automatische Lastverteilung 
+          in einem übersichtlichen Dashboard. 
+          Jeder Fall erhält einen transparenten Score und wird aktiv überwacht, 
+          damit kein Vorgang in Vergessenheit gerät. 
+          Ergänzend entlastet KI gezielt Routineaufgaben – stets dokumentiert und nachvollziehbar.</p>
+        </details>
+
+        <!-- 7. Erkenntnispfad -->
+        <details class="neon-card">
+          <summary><h3>Erkenntnispfad – Ein digitaler Weg zur Haltung</h3>
+            <p>Kein Spiel, sondern eine Reise: durch Moral, Mut und Menschlichkeit.</p></summary>
+          <p>Der Erkenntnispfad kombiniert Storytelling, Entscheidungslogik und Reflexion. 
+          In fünf Stationen erlebt der Nutzer demokratische und ethische Haltungen interaktiv. 
+          Technisch ist es eine Single-File-Web-App mit klarer, futuristischer Gestaltung.</p>
+        </details>
+
+        <!-- 8. Rent a Pro -->
         <details class="neon-card">
           <summary><h3>Rent a Pro – Plattform für Selbstständige</h3>
-            <p>Faire Dienstleistungsvermittlung ohne Preisdruck und Algorithmenzwang.</p></summary>
+            <p>Wo Arbeit wieder Freiheit bedeutet – nicht Vergleich.</p></summary>
           <p>Rent a Pro priorisiert Aufträge nach Aufwand, Dringlichkeit und Relevanz, 
           statt nach Preis. 
           Kund:innen sehen nur individuelle Angebote – nicht öffentliche Preislisten. 
           Geplant sind Kalender-Sync, Map-Suche und flexible Preismodelle.</p>
         </details>
 
-        <!-- AmbiPass -->
+        <!-- 9. eAU-Sync -->
+        <details class="neon-card">
+          <summary><h3>eAU-Sync – Der eine Klick zur Entlastung</h3>
+            <p>Digitalisierung dort, wo sie gebraucht wird – und nicht nur, wo sie glänzt.</p></summary>
+          <p>eAU-Sync vereinfacht den Abruf elektronischer Krankmeldungen für kleine Betriebe. 
+          Das System bietet Datenbank, Archivierung, Exporte und modulare Schnittstellen, 
+          um spätere ITSG-Integration zu ermöglichen. 
+          Es demonstriert, wie zugängliche IT digitale Pflichtprozesse fair gestalten kann.</p>
+        </details>
+
+        <!-- 10. AmbiPass -->
         <details class="neon-card">
           <summary><h3>AmbiPass – Zero-Interaction Ticketing</h3>
-            <p>Privatsphäre-freundliches Fahrkartensystem mit Ephemeral IDs.</p></summary>
+            <p>Einsteigen, erkannt werden, geschützt bleiben.</p></summary>
           <p>AmbiPass validiert Tickets automatisch beim Einsteigen, ohne Scannen oder Identifikation. 
           HMAC-basierte Tokens sichern Offline-Betrieb und Datenschutz. 
           Entwickelt als Python-Simulation mit Edge-Validator und Server-Authority.</p>
         </details>
 
-        <!-- Kinder-Konsole -->
+        <!-- 11. TimeBook -->
+        <details class="neon-card">
+          <summary><h3>TimeBook – Webbasierte Terminverwaltung</h3>
+            <p>Ein Kalender, der nicht ablenkt, sondern Ordnung schafft.</p></summary>
+          <p>TimeBook ermöglicht direkte Terminbuchung über Browser und speichert alles in einer SQLite-Datenbank. 
+          Ideal für kleine Unternehmen, die eine schlanke Lösung ohne Cloud-Abhängigkeit benötigen. 
+          Entwickelt in Python mit Flask.</p>
+        </details>
+
+        <!-- 12. Noctua -->
+        <details class="neon-card">
+          <summary><h3>Noctua – Smart Notification Filter</h3>
+            <p>Die Ruhe ist zurück. Und mit ihr: Kontrolle über jedes Signal.</p></summary>
+          <p>Noctua filtert Systembenachrichtigungen intelligent und regelbasiert, 
+          unabhängig von App-Namen oder Chats. 
+          Für jeden Kontakt können Reaktionsmodi definiert werden – Vibration, Klang oder Anzeige. 
+          Alles läuft lokal, ohne Cloud, als minimalistisches Mini-Betriebssystem im Betriebssystem.</p>
+        </details>
+
+        <!-- 13. VoiceHealthLog -->
+        <details class="neon-card">
+          <summary><h3>VoiceHealthLog – Das sprechende Tagebuch</h3>
+            <p>Wenn Worte heilen: eine App, die Schmerzen versteht, bevor sie vergessen werden.</p></summary>
+          <p>VoiceHealthLog erkennt Symptome, Intensität und Verlauf per Spracheingabe und speichert sie strukturiert auf dem Gerät. 
+          Die App nutzt Kotlin, Jetpack Compose und Room und schützt die Privatsphäre durch vollständige Offline-Verarbeitung. 
+          Sie zeigt, wie Spracherkennung und Gesundheitsdaten elegant verbunden werden können.</p>
+        </details>
+
+        <!-- 14. Kinder-Konsole -->
         <details class="neon-card">
           <summary><h3>Kinder-Konsole – Spielerisch Programmieren lernen</h3>
-            <p>Die Eingabeaufforderung für Kinder: natürlich, freundlich, lehrreich.</p></summary>
+            <p>Wenn Neugier auf Logik trifft, wird Rechnen wieder Staunen.</p></summary>
           <p>Diese Python-App interpretiert Alltagssprache und erklärt Rechenwege kindgerecht. 
           Sie verbindet Logiklernen mit Spaß und macht die Magie des Rechnens verständlich. 
           Ideal für Bildung und frühe digitale Bildung.</p>
-        </details>
-
-        <!-- SocialShield -->
-        <details class="neon-card">
-          <summary><h3>SocialShield – Deutschlands Sozialstaat als Modell</h3>
-            <p>Ein strategisches Konzept für soziale Resilienz und globale Stabilität.</p></summary>
-          <p>SocialShield verknüpft ökonomische, diplomatische und kommunikative Ansätze 
-          zu einer nationalen Friedensstrategie. 
-          Das Projekt zeigt, wie Deutschland durch soziale Investitionen 
-          internationale Stabilität fördern kann.</p>
         </details>
 
       </div>
@@ -169,4 +203,3 @@
   </footer>
 </body>
 </html>
-
