--- a/projekte.html
+++ b/projekte.html
@@ -31,24 +31,6 @@
       <p>
         Auf dieser Seite präsentiere ich ausgewählte Projekte, Konzepte und Ideen.
         Sie verstehen sich als Antworten auf reale Herausforderungen – klar gedacht, praktisch orientiert und mit Blick auf Wirkung umgesetzt.
-        <br><br>
-        <strong>Hinweis:</strong> Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
-        sondern dienen ausschließlich zur Veranschaulichung und Inspiration. 
-        Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
-        ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
-      </p>
-      <p>
-        <strong>Schutz und Urheberschaft:</strong> 
-        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert 
-        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt. 
-        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.
-        Eine Nutzung, Reproduktion oder Weiterentwicklung ist nur mit vorheriger, ausdrücklicher Zustimmung zulässig.
-      </p>
-      <p>
-        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten, 
-        die gesellschaftliche oder technologische Herausforderungen sichtbar machen. 
-        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation 
-        wird als Verletzung der Urheberschaft gewertet.
       </p>
     </section>
 
@@ -191,6 +173,30 @@
 
       </div>
     </section>
+        <!-- Rechtlicher Hinweis -->
+    <section class="projekte-intro" style="margin-top:3rem;">
+      <p>
+        <strong>Hinweis:</strong> 
+        Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
+        sondern dienen ausschließlich zur Veranschaulichung. 
+        Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
+        ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
+      </p>
+      <p>
+        <strong>Schutz und Urheberschaft:</strong> 
+        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert 
+        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt. 
+        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.
+        Eine Nutzung, Reproduktion oder Weiterentwicklung ist nur mit vorheriger, ausdrücklicher Zustimmung zulässig.
+      </p>
+      <p>
+        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten, 
+        die gesellschaftliche oder technologische Herausforderungen sichtbar machen. 
+        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation 
+        wird als Verletzung der Urheberschaft gewertet.
+      </p>
+    </section>
+
   </main>
 
   <!-- Footer -->
