--- a/projekte.html
+++ b/projekte.html
@@ -38,174 +38,192 @@
     <section class="angebote">
       <div class="angebot-list">
 
-        <!-- 1. SocialShield -->
-        <details class="neon-card">
-          <summary><h3>SocialShield – Deutschlands Sozialstaat als Modell</h3>
-            <p>Frieden als Strategie – Stärke durch Fürsorge.</p></summary>
-          <p>SocialShield verknüpft ökonomische, diplomatische und kommunikative Ansätze 
-          zu einer nationalen Friedensstrategie. 
-          Das Projekt zeigt, wie Deutschland durch soziale Investitionen 
-          internationale Stabilität fördern kann.</p>
-        </details>
-
-        <!-- 2. NullState -->
+        <!-- 1. NullState -->
         <details class="neon-card">
           <summary><h3>NullState – Dezentrale Governance</h3>
             <p>Wenn Macht nicht mehr gehortet, sondern geteilt wird.</p></summary>
           <p>NullState erforscht neue Formen digitaler Demokratie mit zufälligen, 
-          zeitlich begrenzten Mandaten. 
-          Entscheidungen werden transparent dokumentiert, um gerechte Teilhabe zu ermöglichen 
-          und Hierarchien aufzulösen.</p>
+          zeitlich begrenzten Mandaten. Entscheidungen werden transparent dokumentiert, 
+          um gerechte Teilhabe zu ermöglichen und Hierarchien aufzulösen.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Proof of Concept (functional architecture defined, pilot environment pending)</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 3 – Proof of concept demonstrated</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 3. OTE -->
+        <!-- 2. OTE -->
         <details class="neon-card">
           <summary><h3>Open Transparency Engine – Licht in die Schatten der Finanzen</h3>
             <p>Wenn Zahlen sprechen, verlieren Systeme ihre Tarnung.</p></summary>
           <p>OTE sammelt und visualisiert staatliche Finanzströme, Subventionen und Lobbygelder. 
-          Als Python-Prototyp mit CSV-Datenbank und Dashboard-Vision schafft es eine Grundlage für 
+          Als Python-Prototyp mit CSV-Datenbank und Dashboard schafft es eine Grundlage für 
           nachvollziehbare Transparenz und eine faktenbasierte Öffentlichkeit.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Proof of Concept (functional architecture defined, pilot environment pending)</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 3 – Proof of concept demonstrated</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 4. CLEA -->
+        <!-- 3. CLEA -->
         <details class="neon-card">
           <summary><h3>CLEA – Citizen Legal Empowerment Assistant</h3>
             <p>Wenn Recht kein Privileg mehr ist, sondern Wissen – transparent, messbar, menschlich.</p></summary>
           <p>CLEA untersucht, wie KI jurisches Wissen für Bürger zugänglich machen kann. 
           Simulationen und mathematische Modelle zeigen, wo Wissen und Macht auseinanderfallen. 
           Das Projekt vereint Transparenz, Ethik und gesellschaftliche Forschung in einem Proof-of-Concept.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Proof of Concept — funktionale Architektur, lauffähige Simulationsmodule, dokumentierte Beispiel-Cases</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 3 – Analytical and experimental proof of concept demonstrated</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 5. HinSchG -->
+        <!-- 4. HinSchG -->
         <details class="neon-card">
           <summary><h3>HinSchG-Prototype – Der stille Kanal für laute Wahrheiten</h3>
             <p>Wo Worte geschützt werden müssen, sorgt Code für Vertrauen.</p></summary>
           <p>Das Projekt setzt das Hinweisgeberschutzgesetz technisch um: 
           pseudonyme Meldungen, Hash-Ketten-Datenbank, Fristenmanagement und Unit-Tests. 
           Es zeigt, wie Compliance und Benutzerfreundlichkeit in einem leichten System verschmelzen.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Functional Prototype – vollständige Architektur implementiert und getestet</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 5 – Validierung in relevanter Umgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 6. YouthShield -->
+        <!-- 5. YouthShield -->
         <details class="neon-card">
           <summary><h3>YouthShield – Intelligentes Fallmanagement für die Jugendhilfe</h3>
             <p>Weil kein Kind übersehen werden darf – nicht durch Bürokratie, nicht durch Zufall.</p></summary>
           <p>YouthShield kombiniert Risikobewertung, Fristenkontrolle und automatische Lastverteilung 
-          in einem übersichtlichen Dashboard. 
-          Jeder Fall erhält einen transparenten Score und wird aktiv überwacht, 
-          damit kein Vorgang in Vergessenheit gerät. 
-          Ergänzend entlastet KI gezielt Routineaufgaben – stets dokumentiert und nachvollziehbar.</p>
+          in einem übersichtlichen Dashboard. Jeder Fall erhält einen transparenten Score und wird aktiv überwacht.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Functional Prototype / Early Pilot Phase</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 4 → 5 – Validierung von Laborumgebung zu relevanter Umgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 7. Erkenntnispfad -->
+        <!-- 6. Erkenntnispfad -->
         <details class="neon-card">
           <summary><h3>Erkenntnispfad – Ein digitaler Weg zur Haltung</h3>
             <p>Kein Spiel, sondern eine Reise: durch Moral, Mut und Menschlichkeit.</p></summary>
           <p>Der Erkenntnispfad kombiniert Storytelling, Entscheidungslogik und Reflexion. 
-          In fünf Stationen erlebt der Nutzer demokratische und ethische Haltungen interaktiv. 
-          Technisch ist es eine Single-File-Web-App mit klarer, futuristischer Gestaltung.</p>
+          In fünf Stationen erlebt der Nutzer demokratische und ethische Haltungen interaktiv.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Completed Prototype – Single-File-Web-App implementiert</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 5 – Validiert in relevanter Umgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 8. Rent a Pro -->
+        <!-- 7. Rent a Pro -->
         <details class="neon-card">
           <summary><h3>Rent a Pro – Plattform für Selbstständige</h3>
             <p>Wo Arbeit wieder Freiheit bedeutet – nicht Vergleich.</p></summary>
           <p>Rent a Pro priorisiert Aufträge nach Aufwand, Dringlichkeit und Relevanz, 
-          statt nach Preis. 
-          Kund:innen sehen nur individuelle Angebote – nicht öffentliche Preislisten. 
-          Geplant sind Kalender-Sync, Map-Suche und flexible Preismodelle.</p>
+          statt nach Preis. Kund:innen sehen nur individuelle Angebote – nicht öffentliche Preislisten.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Prototype – Backend + Frontend funktionsfähig, React/Vite</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 4 – Validierung in Laborumgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 9. eAU-Sync -->
+        <!-- 8. eAU-Sync -->
         <details class="neon-card">
           <summary><h3>eAU-Sync – Der eine Klick zur Entlastung</h3>
             <p>Digitalisierung dort, wo sie gebraucht wird – und nicht nur, wo sie glänzt.</p></summary>
           <p>eAU-Sync vereinfacht den Abruf elektronischer Krankmeldungen für kleine Betriebe. 
-          Das System bietet Datenbank, Archivierung, Exporte und modulare Schnittstellen, 
-          um spätere ITSG-Integration zu ermöglichen. 
-          Es demonstriert, wie zugängliche IT digitale Pflichtprozesse fair gestalten kann.</p>
+          Archivierung, Exporte und modulare Schnittstellen sind vorhanden.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Prototype – vollständige Architektur, ITSG-Schnittstelle pending</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 4 – Validierung in Laborumgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 10. AmbiPass -->
+        <!-- 9. AmbiPass -->
         <details class="neon-card">
           <summary><h3>AmbiPass – Zero-Interaction Ticketing</h3>
             <p>Einsteigen, erkannt werden, geschützt bleiben.</p></summary>
           <p>AmbiPass validiert Tickets automatisch beim Einsteigen, ohne Scannen oder Identifikation. 
-          HMAC-basierte Tokens sichern Offline-Betrieb und Datenschutz. 
-          Entwickelt als Python-Simulation mit Edge-Validator und Server-Authority.</p>
+          HMAC-basierte Tokens sichern Offline-Betrieb und Datenschutz.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Functional Prototype – Kryptokern und Simulation validiert</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 4 – Validierung in Laborumgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 11. TimeBook -->
+        <!-- 10. TimeBook -->
         <details class="neon-card">
           <summary><h3>TimeBook – Webbasierte Terminverwaltung</h3>
             <p>Ein Kalender, der nicht ablenkt, sondern Ordnung schafft.</p></summary>
           <p>TimeBook ermöglicht direkte Terminbuchung über Browser und speichert alles in einer SQLite-Datenbank. 
-          Ideal für kleine Unternehmen, die eine schlanke Lösung ohne Cloud-Abhängigkeit benötigen. 
-          Entwickelt in Python mit Flask.</p>
+          Ideal für kleine Unternehmen, die eine schlanke Lösung ohne Cloud-Abhängigkeit benötigen.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Prototype – voll funktionsfähig, modular erweiterbar</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 5 – Validierung in relevanter Umgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 12. Noctua -->
+        <!-- 11. Noctua -->
         <details class="neon-card">
           <summary><h3>Noctua – Smart Notification Filter</h3>
             <p>Die Ruhe ist zurück. Und mit ihr: Kontrolle über jedes Signal.</p></summary>
-          <p>Noctua filtert Systembenachrichtigungen intelligent und regelbasiert, 
-          unabhängig von App-Namen oder Chats. 
-          Für jeden Kontakt können Reaktionsmodi definiert werden – Vibration, Klang oder Anzeige. 
-          Alles läuft lokal, ohne Cloud, als minimalistisches Mini-Betriebssystem im Betriebssystem.</p>
+          <p>Noctua filtert Systembenachrichtigungen intelligent und regelbasiert. 
+          Für jeden Kontakt können Reaktionsmodi definiert werden – Vibration, Klang oder Anzeige.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Advanced Prototype – Notification-Daemon implementiert, Compose-UI integriert</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 5 – Validierung auf realen Android-Systemen</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 13. VoiceHealthLog -->
+        <!-- 12. VoiceHealthLog -->
         <details class="neon-card">
           <summary><h3>VoiceHealthLog – Das sprechende Tagebuch</h3>
             <p>Wenn Worte heilen: eine App, die Schmerzen versteht, bevor sie vergessen werden.</p></summary>
-          <p>VoiceHealthLog erkennt Symptome, Intensität und Verlauf per Spracheingabe und speichert sie strukturiert auf dem Gerät. 
-          Die App nutzt Kotlin, Jetpack Compose und Room und schützt die Privatsphäre durch vollständige Offline-Verarbeitung. 
-          Sie zeigt, wie Spracherkennung und Gesundheitsdaten elegant verbunden werden können.</p>
+          <p>VoiceHealthLog erkennt Symptome, Intensität und Verlauf per Spracheingabe und speichert sie strukturiert. 
+          Offline-Verarbeitung garantiert volle Privatsphäre.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Prototype – voll funktionsfähige Version mit Voice Recognition und NLP</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 5 – Validierung in relevanter Android-Umgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
-        <!-- 14. Kinder-Konsole -->
+        <!-- 13. Kinder-Konsole -->
         <details class="neon-card">
           <summary><h3>Kinder-Konsole – Spielerisch Programmieren lernen</h3>
             <p>Wenn Neugier auf Logik trifft, wird Rechnen wieder Staunen.</p></summary>
           <p>Diese Python-App interpretiert Alltagssprache und erklärt Rechenwege kindgerecht. 
-          Sie verbindet Logiklernen mit Spaß und macht die Magie des Rechnens verständlich. 
           Ideal für Bildung und frühe digitale Bildung.</p>
+          <ul class="projekt-meta">
+            <li><strong>Development Stage:</strong> Prototype – funktionaler Text-Prototyp mit Sprachparser und Logik</li>
+            <li><strong>Technology Readiness Level (TRL):</strong> TRL 4 – Validierung in Laborumgebung</li>
+            <li><strong>Ausblick:</strong> Kooperation gesucht</li>
+          </ul>
         </details>
 
       </div>
     </section>
-        <!-- Rechtlicher Hinweis -->
-    <section class="projekte-intro" style="margin-top:3rem;">
-      <p>
-        <strong>Hinweis:</strong> 
-        Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
-        sondern dienen ausschließlich zur Veranschaulichung. 
-        Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
-        ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
-      </p>
-      <p>
-        <strong>Schutz und Urheberschaft:</strong> 
-        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert 
-        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt. 
-        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.
-        Eine Nutzung, Reproduktion oder Weiterentwicklung ist nur mit vorheriger, ausdrücklicher Zustimmung zulässig.
-      </p>
-      <p>
-        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten, 
-        die gesellschaftliche oder technologische Herausforderungen sichtbar machen. 
-        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation 
-        wird als Verletzung der Urheberschaft gewertet.
-      </p>
-    </section>
 
+    <!-- Rechtlicher Hinweis -->
+    <section class="projekte-intro" style="margin-top:3rem;">
+      <p><strong>Hinweis:</strong> Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne …</p>
+      <p><strong>Schutz und Urheberschaft:</strong> Alle hier dargestellten Projekte wurden …</p>
+    </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>
-      © 2025 Daniel S.M. Möhle · 
-      <a href="impressum.html">Impressum</a> · 
-      <a href="datenschutz.html">Datenschutz</a>
-    </p>
+    <p>© 2025 Daniel S.M. Möhle · <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
 </body>
 </html>
