--- a/projekte.html
+++ b/projekte.html
@@ -214,12 +214,29 @@
       </div>
     </section>
 
-    <!-- Rechtlicher Hinweis -->
+     <!-- Rechtlicher Hinweis -->
     <section class="projekte-intro" style="margin-top:3rem;">
-      <p><strong>Hinweis:</strong> Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne …</p>
-      <p><strong>Schutz und Urheberschaft:</strong> Alle hier dargestellten Projekte wurden …</p>
+      <p>
+        <strong>Hinweis:</strong> 
+        Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
+        sondern dienen ausschließlich zur Veranschaulichung. 
+        Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
+        ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
+      </p>
+      <p>
+        <strong>Schutz und Urheberschaft:</strong> 
+        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert 
+        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt. 
+        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.
+        Eine Nutzung, Reproduktion oder Weiterentwicklung ist nur mit vorheriger, ausdrücklicher Zustimmung zulässig.
+      </p>
+      <p>
+        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten, 
+        die gesellschaftliche oder technologische Herausforderungen sichtbar machen. 
+        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation 
+        wird als Verletzung der Urheberschaft gewertet.
+      </p>
     </section>
-  </main>
 
   <!-- Footer -->
   <footer>
