--- a/angebote.html
+++ b/angebote.html
@@ -32,24 +32,16 @@
 
         <a class="angebot-link" href="science-beratung.html">
           <div class="angebot neon-card">
-            <h3>Science & Beratung</h3>
-            <p>Fachliche Unterstützung in Physik, Chemie und angrenzenden Wissenschaften.</p>
+            <h3>Science</h3>
+            <p>Fachliche Unterstützung in Physik und angrenzenden Disziplinen.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
 
         <a class="angebot-link" href="software-coding.html">
           <div class="angebot neon-card">
-            <h3>Wissenschaftliche Software & Coding</h3>
-            <p>Individuelle Python-Lösungen: Simulationen, Datenanalyse, Visualisierung, Automatisierung.</p>
-            <p class="cta-inline">Details ansehen →</p>
-          </div>
-        </a>
-
-        <a class="angebot-link" href="music-audio.html">
-          <div class="angebot neon-card">
-            <h3>Music & Audio</h3>
-            <p>Sounddesign, Komposition, Mastering & Audio-Processing mit wissenschaftlichem Anspruch.</p>
+            <h3>Datenanalyse (Python)</h3>
+            <p>Individuelle Lösungen für Simulation, Auswertung, Visualisierung und Automatisierung.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
@@ -64,8 +56,8 @@
 
         <a class="angebot-link" href="lehre.html">
           <div class="angebot neon-card">
-            <h3>Lehre & Wissenstransfer</h3>
-            <p>Tutorien, Workshops, Lernkonzepte & praxisnahe Vermittlung von Wissen.</p>
+            <h3>Wissenstransfer</h3>
+            <p>Tutorien, Schulungen und didaktische Konzepte – praxisnah und verständlich.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
@@ -73,7 +65,15 @@
         <a class="angebot-link" href="coaching.html">
           <div class="angebot neon-card">
             <h3>Beratung & Coaching</h3>
-            <p>Analytische Beratung & Strategieentwicklung für komplexe Fragestellungen.</p>
+            <p>Strukturierte Analyse, Methodenberatung und Entscheidungs­unterstützung.</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
+
+        <a class="angebot-link" href="music-audio.html">
+          <div class="angebot neon-card">
+            <h3>Audioproduktion & Sounddesign</h3>
+            <p>Sounddesign, Komposition, Mastering & Audio-Processing mit wissenschaftlichem Anspruch.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
