--- a/angebote.html
+++ b/angebote.html
@@ -40,7 +40,7 @@
 
         <a class="angebot-link" href="software-coding.html">
           <div class="angebot neon-card">
-            <h3>Datenanalyse (Python)</h3>
+            <h3>Datenanalyse</h3>
             <p>Individuelle Lösungen für Simulation, Auswertung, Visualisierung und Automatisierung.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
@@ -64,7 +64,7 @@
 
         <a class="angebot-link" href="coaching.html">
           <div class="angebot neon-card">
-            <h3>Beratung & Coaching</h3>
+            <h3>Beratung</h3>
             <p>Strukturierte Analyse, Methodenberatung und Entscheidungs­unterstützung.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
@@ -72,7 +72,7 @@
 
         <a class="angebot-link" href="music-audio.html">
           <div class="angebot neon-card">
-            <h3>Audioproduktion & Sounddesign</h3>
+            <h3>Audio & Sound</h3>
             <p>Sounddesign, Komposition, Mastering & Audio-Processing mit wissenschaftlichem Anspruch.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
